# Yaml

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.history/src/core/: assert_20240921172717.hpp  assert_20240921172959.hpp  assert_20240921173443.hpp  assert_20240921173606.hpp  defines_20240921172648.hpp  defines_20240921172930.hpp  defines_20240921172953.hpp  defines_20240921173653.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: entity.cpp  entity.hpp  entity_manager.hpp  logger.cpp  logger.hpp  main.cpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/.history/core/: assert_20240824200341.hpp
src/application/: application.cpp  application.hpp  window_interface.hpp
src/application/platform/opengl/: opengl_window.cpp  opengl_window.hpp
src/components/: transform.cpp  transform.hpp
src/core/: assert.hpp  core.hpp  defines.hpp  logger.cpp  logger.hpp  pch.hpp  window.cpp  window.hpp
src/scene/: components.hpp  entity.cpp  entity.hpp  entity_manager.hpp  entity_view.hpp  scene.cpp  scene.hpp
